--- a/index.html
+++ b/index.html
@@ -6,32 +6,32 @@
 
 <body>
 
-<h1>Page title goes here</h1>
+<h1>Alison Campbell</h1>
 
 <div id="contact">
 <h2>Contact info</h2>
 <ul>
-  <li><strong>Phone:</strong> 555-867-5309</li>
-  <li><strong>E-mail:</strong> example@example.org</li>
-  <li><strong>Website:</strong> http://www.example.org</li>
+  <li><strong>Phone:</strong> (952) 334-3828</li>
+  <li><strong>E-mail:</strong> camp2633@umn.edu</li>
+  <li><strong>Website:</strong> https://github.com/camp2633</li>
 </ul>
 </div>
 
-<h2>Section 1</h2>
+<h2>Hi, my name is Alison!</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar mi magna. Aliquam sodales felis odio, eget ultrices lorem rutrum vel. Proin eget lorem nec tellus auctor maximus ut non nunc. Vestibulum pharetra nec tortor tempus sodales. Cras nec nibh eros. Fusce quis ex at felis venenatis imperdiet ut non enim. Vestibulum quis elit eget dolor maximus blandit. Etiam ac ullamcorper est. Ut tempus nibh sit amet augue suscipit suscipit. Duis at venenatis purus, ac egestas tortor. Quisque pretium orci sit amet magna iaculis, vel varius ante tincidunt. Maecenas at velit nec sapien facilisis lacinia. Nulla non molestie est. Vestibulum ut mi lacus. Vestibulum at nisl feugiat, efficitur ex ac, ultrices metus. </p>
+<p>I am a student in the University of Minnesota's Technical Communication certificate program. I am currently a full time preschool teacher, and am excited to get back into school this year.</p>
 
-<p> Vivamus cursus dolor urna. Integer rhoncus ac augue condimentum placerat. Vivamus sed tristique enim. Nulla pretium mattis justo vel ornare. Donec sit amet egestas massa. Suspendisse consectetur sapien ex, a interdum urna pretium vel. Ut quis feugiat ante. Donec porttitor enim quam, in faucibus lectus imperdiet vitae. Ut metus nunc, tincidunt nec metus sit amet, sodales luctus velit. Nullam sollicitudin non nisl ac mollis. Sed a nunc et tortor posuere sodales laoreet ut odio. Sed sit amet ex malesuada, fermentum risus eget, suscipit erat. Fusce interdum purus gravida dictum maximus. Nunc quis egestas risus. Fusce fermentum, sapien vitae iaculis iaculis, velit odio rhoncus lorem, in tempus velit nunc sit amet augue. Sed ut mi libero.</p>
+<p>In addition to Writ 5662 with Dr. Duin, I am also taking Writ 5001 with Dr. Gurak. </p>
 
-<h2>Section 2</h2>
+<h2>Education Goals</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at iaculis dolor. Nam vestibulum vehicula tincidunt. Vestibulum quis felis magna. Ut a nunc sit amet metus suscipit posuere a nec nibh. Cras ut vehicula nisi, at vulputate lacus. Aenean tristique leo id diam hendrerit, ut cursus turpis venenatis. Morbi auctor imperdiet congue. Donec ac sem ullamcorper, tempor lacus accumsan, sodales augue. Donec quis varius neque. Pellentesque non ornare urna. Vivamus lacinia ex odio, sit amet gravida tellus porta consequat. Vivamus fringilla, lorem sit amet aliquam dapibus, ipsum est sodales velit, vitae interdum nibh odio eget sem.</p>
+<p>My goals for this program are to refresh the skills that I gained from my undergraduate degree in Rhetorics of Science, Technology, and Culture from the University of Wisconsin-Eau Claire, as well as to develop new skills that will make me more marketable in the digital age.</p>
 
-<p>Aliquam volutpat est ut arcu sagittis tristique. Mauris non porta risus. Praesent volutpat eu metus in placerat. Nullam justo urna, aliquet eu pulvinar id, porttitor eu turpis. Vestibulum interdum urna at turpis cursus bibendum. Aliquam vitae lectus magna. Quisque et posuere mauris. Vestibulum id luctus ipsum, sit amet placerat erat. Donec sodales iaculis ligula sit amet sollicitudin. Suspendisse placerat venenatis ex ac vestibulum. In vestibulum ipsum velit, id aliquet orci dictum non. Proin ullamcorper at lorem et consequat. Nam augue nisi, varius ac velit eu, suscipit lacinia diam. </p>
+<p>The hybrid roles that I am currently drawn to are technical writer/illustrator, technical writer/digital marketer, and technical writer/editor.<p>
 
-<h2>Section 3</h2>
+<h2>Outside of Class</h2>
 
-<p>Aenean elit odio, tempor sed elementum in, consequat vel mi. Vivamus non sagittis nulla. Vivamus sem massa, tempor vitae orci id, tempor imperdiet nisl. Suspendisse rutrum, arcu at lobortis consectetur, purus magna interdum massa, vel sodales massa libero sit amet augue. Morbi non condimentum ipsum. Praesent maximus lacus nec nulla vulputate, sed efficitur nisl suscipit. Suspendisse accumsan cursus magna, eget porttitor arcu varius eu.</p>
+<p>I grew up in Seattle, WA and developed a love for the outdoors there. In my free time, I enjoy hiking, reading, camping, traveling, and painting</p>
 
 </body>
 </html>
